Bug 718374 - File picker support for choosing Win7 library default folders, and strip sdk ifdefing junk. r=neil