widget/windows/nsFilePicker.h
@@ -44,8 +44,8 @@
 
 #include <windows.h>
 
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
-// For Vista IFileDialog interfaces
+// For Vista IFileDialog interfaces which aren't exposed
+// unless _WIN32_WINNT >= _WIN32_WINNT_LONGHORN.
 #if _WIN32_WINNT < _WIN32_WINNT_LONGHORN
 #define _WIN32_WINNT_bak _WIN32_WINNT
 #undef _WIN32_WINNT
@@ -53,7 +53,6 @@
 #define _WIN32_IE_bak _WIN32_IE
 #undef _WIN32_IE
 #define _WIN32_IE _WIN32_IE_IE70
-#endif
 #endif
 
 #include "nsILocalFile.h"
@@ -72,10 +71,9 @@
  * Native Windows FileSelector wrapper
  */
 
-class nsFilePicker : public nsBaseFilePicker
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
-                     , public IFileDialogEvents
-#endif
+class nsFilePicker :
+  public nsBaseFilePicker,
+  public IFileDialogEvents
 {
 public:
   nsFilePicker(); 
@@ -83,10 +81,8 @@ public:
 
   NS_DECL_ISUPPORTS
   
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
   // IUnknown's QueryInterface
   STDMETHODIMP QueryInterface(REFIID refiid, void** ppvResult);
-#endif
 
   // nsIFilePicker (less what's in nsBaseFilePicker)
   NS_IMETHOD GetDefaultString(nsAString& aDefaultString);
@@ -102,7 +98,6 @@ public:
   NS_IMETHOD ShowW(PRInt16 *aReturnVal); 
   NS_IMETHOD AppendFilter(const nsAString& aTitle, const nsAString& aFilter);
 
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
   // IFileDialogEvents
   HRESULT STDMETHODCALLTYPE OnFileOk(IFileDialog *pfd);
   HRESULT STDMETHODCALLTYPE OnFolderChanging(IFileDialog *pfd, IShellItem *psiFolder);
@@ -111,7 +106,6 @@ public:
   HRESULT STDMETHODCALLTYPE OnShareViolation(IFileDialog *pfd, IShellItem *psi, FDE_SHAREVIOLATION_RESPONSE *pResponse);
   HRESULT STDMETHODCALLTYPE OnTypeChange(IFileDialog *pfd);
   HRESULT STDMETHODCALLTYPE OnOverwrite(IFileDialog *pfd, IShellItem *psi, FDE_OVERWRITE_RESPONSE *pResponse);
-#endif
 
 protected:
   enum PickerType {
@@ -128,10 +122,8 @@ protected:
   bool FilePickerWrapper(OPENFILENAMEW* ofn, PickerType aType);
   bool ShowXPFolderPicker(const nsString& aInitialDir);
   bool ShowXPFilePicker(const nsString& aInitialDir);
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
   bool ShowFolderPicker(const nsString& aInitialDir);
   bool ShowFilePicker(const nsString& aInitialDir);
-#endif
   void AppendXPFilter(const nsAString& aTitle, const nsAString& aFilter);
   void RememberLastUsedDirectory();
   bool IsPrivacyModeEnabled();
@@ -158,7 +150,6 @@ protected:
   static PRUnichar      *mLastUsedUnicodeDirectory;
   HWND                   mDlgWnd;
 
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
   class ComDlgFilterSpec
   {
   public:
@@ -185,16 +176,13 @@ protected:
 
   ComDlgFilterSpec       mComFilterList;
   DWORD                  mFDECookie;
-#endif
 };
 
-#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN
 #if defined(_WIN32_WINNT_bak)
 #undef _WIN32_WINNT
 #define _WIN32_WINNT _WIN32_WINNT_bak
 #undef _WIN32_IE
 #define _WIN32_IE _WIN32_IE_bak
-#endif
 #endif
 
 #endif // nsFilePicker_h__
